--- a/index.html
+++ b/index.html
@@ -474,7 +474,11 @@
       <button class="btn fully" id="theme_toggle" onclick="toggleTheme()" title="Toggle Theme">
         <i class="fa fa-moon" id="theme_icon" aria-hidden="true"></i> Theme
       </button>
-      <button class="btn btn-primary fully" id="export_mode" title="Export SVG">
+
+
+
+
+      <button class="btn btn-primary fully" id="export_mode_v2" title="Export SVG">
         <i class="fa fa-download" aria-hidden="true"></i> Export
       </button>
     </div>
@@ -605,6 +609,6 @@
 <script src="qSVG.js"></script>
 <script src="editor.js"></script>
 <script src="engine.js"></script>
-<script src="export.js"></script>
+<script src="export.js?v=1"></script>
 
 </html>
