--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <header>Top2Pano Editor</header>
 
   <svg id="lin" viewBox="0 0 1100 700" preserveAspectRatio="xMidYMin slice" xmlns="http://www.w3.org/2000/svg"
+    xmlns:xlink="http://www.w3.org/1999/xlink"
     style="z-index:2;margin:0;padding:0;width:calc(100vw - 200px);height:100vh;position:absolute;top:0;left:200px;right:0;bottom:0">
 
     <defs>
@@ -178,6 +179,11 @@
       <input type="range" id="bboxWidth" step="1" class="range" />
       <p>Length [<span id="bboxHeightScale"></span>] : <span id="bboxHeightVal"></span> cm</span></p>
       <input type="range" id="bboxHeight" step="1" class="range" />
+      <label class="toggle-item" style="margin-top:10px">
+        <input type="checkbox" id="bboxLockAspect" checked />
+        <span class="toggle-switch"></span>
+        <span class="toggle-label">Lock aspect ratio</span>
+      </label>
     </section>
 
     <section id="objBoundingBoxRotation">
@@ -330,6 +336,7 @@
     <div class="roomColor" data-type="grass"
       style="background: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRWh5nEP_Trwo96CJjev6lnKe0_dRdA63RJFaoc3-msedgxveJd');">
     </div>
+    <div id="custom_materials"></div>
     <div data-type="#ff008a" style="clear:both"></div>
     <br /><br />
     <input type="hidden" id="roomBackground" value="gradientNeutral" />
@@ -401,6 +408,9 @@
       <button class="btn fully" id="window_mode" onclick="toggleSubmenu('window_list', this);">
         <i class="fa fa-window-maximize" aria-hidden="true"></i> Window
       </button>
+      <button class="btn fully" id="home_mode" onclick="toggleSubmenu('home_list', this);">
+        <i class="fa fa-home" aria-hidden="true"></i> Home
+      </button>
       <button class="btn fully object" id="stair_mode" onclick="$('.sub').hide();$('#door_list').hide()">
         <i class="fa fa-stairs" aria-hidden="true"></i> Stair
       </button>
@@ -437,6 +447,9 @@
         <i class="fa fa-arrows-left-right"></i> Sliding
       </button>
     </div>
+
+    <!-- Home objects submenu (populated from assets.js) -->
+    <div id="home_list" class="sub"></div>
 
     <div class="tool-divider"></div>
 
@@ -605,10 +618,38 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js"
   integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
 <script src="mousewheel.js"></script>
-<script src="func.js"></script>
-<script src="qSVG.js"></script>
-<script src="editor.js"></script>
-<script src="engine.js"></script>
-<script src="export.js?v=1"></script>
+<script>
+  // Load JS in a deterministic order, with cache-busting for assets.
+  // This prevents races where `func.js` runs before `assets.js` is ready.
+  (function () {
+    var buster = String(Date.now());
+    window.__TOP2PANO_ASSET_BUSTER__ = buster;
+
+    var scripts = [
+      'assets.js?v=' + encodeURIComponent(buster),
+      'func.js?v=2',
+      'qSVG.js',
+      'editor.js',
+      'engine.js?v=2',
+      'model_pipeline.js?v=1',
+      'export.js?v=1'
+    ];
+
+    function loadNext(i) {
+      if (i >= scripts.length) return;
+      var s = document.createElement('script');
+      s.src = scripts[i];
+      s.onload = function () { loadNext(i + 1); };
+      s.onerror = function () {
+        // Keep going so the page remains usable even if an optional script fails.
+        console.error('Failed to load script:', scripts[i]);
+        loadNext(i + 1);
+      };
+      document.head.appendChild(s);
+    }
+
+    loadNext(0);
+  })();
+</script>
 
 </html>
